--- a/Sources/iDonateAlert/iDonateAlert.storyboard
+++ b/Sources/iDonateAlert/iDonateAlert.storyboard
@@ -69,6 +69,9 @@ Sadece birkaç dokunuşla afet yardımı çabalarına bağışta bulunabilir ve 
                                                 <buttonConfiguration key="configuration" style="plain" image="closeButton" title="Kapat  ">
                                                     <fontDescription key="titleFontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="15"/>
                                                 </buttonConfiguration>
+                                                <userDefinedRuntimeAttributes>
+                                                    <userDefinedRuntimeAttribute type="string" keyPath="localizedTitleKey" value="close"/>
+                                                </userDefinedRuntimeAttributes>
                                                 <connections>
                                                     <action selector="dismiss:" destination="Y6W-OH-hqX" eventType="touchUpInside" id="TkM-Nm-7bD"/>
                                                 </connections>
